--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Task-Padre-Plugin-Deps
 
+0.02    2008.12.19
+		add Padre::Plugin::HTML::Export
+		add Padre::Plugin::Alarm
+		etc.
+
 0.01    2008.11.12
         First version, released on an unsuspecting world.
 
