Import of FAYLAND/Task-Padre-Plugin-Deps-0.03 from CPAN.
gitpan-cpan-distribution: Task-Padre-Plugin-Deps
gitpan-cpan-version:      0.03
gitpan-cpan-path:         FAYLAND/Task-Padre-Plugin-Deps-0.03.tar.gz
gitpan-cpan-author:       FAYLAND
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Task-Padre-Plugin-Deps
 
+0.03    2008.12.19
+        fix wrong uploaded version
+
 0.02    2008.12.19
 		add Padre::Plugin::HTML::Export
 		add Padre::Plugin::Alarm
