--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Task-Padre-Plugin-Deps
 
+0.09    2009.3.5
+        SVK plugin
+
 0.07    2009.1.23
         remove CPAN plugin stuff
 
