--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Task-Padre-Plugin-Deps
 
+0.11    2009.4.1
+        Padre::Plugin::Nopaste
+        Padre::Plugin::PSI
+
 0.10    2009.3.14
         Autoformat plugin
 
