Import of FAYLAND/Task-Padre-Plugin-Deps-0.12 from CPAN.
gitpan-cpan-distribution: Task-Padre-Plugin-Deps
gitpan-cpan-version:      0.12
gitpan-cpan-path:         FAYLAND/Task-Padre-Plugin-Deps-0.12.tar.gz
gitpan-cpan-author:       FAYLAND
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Task-Padre-Plugin-Deps
 
+0.12    2009.4.2
+        Catalyst Plugin
+        DataWalker plugin
+
 0.11    2009.4.1
         Padre::Plugin::Nopaste
         Padre::Plugin::PSI
